--- a/sfapp/.env
+++ b/sfapp/.env
@@ -26,5 +26,5 @@ APP_SECRET=1a0021821b2a223e5cfb4771485e6df7
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://udbsfapp:pdbsfapp@database:3306/dbsfapp?serverVersion=10.10.2-MariaDB&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
