--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Uniquement sous linux
 # Décommenter ces valeurs
 
-#USER_NAME=jmalki01
-#USER_ID=58708
-#GROUP_NAME=jmalki01
-#GROUP_ID=2001
+USER_NAME=apanis
+USER_ID=1000
+GROUP_NAME=apanis
+GROUP_ID=1000
 
 
