--- a/sa-software/software/platformio.ini
+++ b/sa-software/software/platformio.ini
@@ -13,3 +13,4 @@ platform = espressif32
 board = esp32-s2-saola-1
 framework = arduino
 monitor_speed = 9600
+lib_deps = thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.4.0
