--- a/sa-software/software/platformio.ini
+++ b/sa-software/software/platformio.ini
@@ -13,3 +13,7 @@ platform = espressif32
 board = esp32-s2-saola-1
 framework = arduino
 monitor_speed = 9600
+lib_deps =
+# RECOMMENDED
+# Accept new functionality in a backwards compatible manner and patches
+    seeed-studio/Grove SGP30_Gas_Sensor @ ^1.0.0
