--- a/webapp/sfapp/config/packages/security.yaml
+++ b/webapp/sfapp/config/packages/security.yaml
@@ -3,7 +3,13 @@ security:
         # - { path: ^/profile, roles: ROLE_USER }
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        harsh:
+            algorithm: 'auto'
+            cost: 15
+
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
+            algorithm: 'auto'
+            cost: 15
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         users_in_memory: { memory: null }
