Finition sur l'US 2.28 Ajouter un bâtiment

--- a/webapp/.env
+++ b/webapp/.env
@@ -1,7 +1,7 @@
 # Uniquement sous linux
 # Décommenter ces valeurs
 
-USER_NAME=altaks
+USER_NAME=lonq
 USER_ID=1000
-GROUP_NAME=altaks
+GROUP_NAME=lonq
 GROUP_ID=1000
