--- a/webapp/.env
+++ b/webapp/.env
@@ -1,7 +1,7 @@
 # Uniquement sous linux
 # Décommenter ces valeurs
 
-USER_NAME=lonq
+USER_NAME=altaks
 USER_ID=1000
-GROUP_NAME=lonq
+GROUP_NAME=altaks
 GROUP_ID=1000
