--- a/webapp/sfapp/composer.json
+++ b/webapp/sfapp/composer.json
@@ -16,12 +16,15 @@
         "symfony/flex": "^2",
         "symfony/form": "6.3.*",
         "symfony/framework-bundle": "6.3.*",
+        "symfony/http-client": "6.3.*",
         "symfony/password-hasher": "6.3.*",
         "symfony/runtime": "6.3.*",
         "symfony/security-bundle": "6.3.*",
         "symfony/twig-bundle": "6.3.*",
         "symfony/webpack-encore-bundle": "^2.1",
-        "symfony/yaml": "6.3.*"
+        "symfony/yaml": "6.3.*",
+        "twig/extra-bundle": "^3.8",
+        "twig/intl-extra": "^3.8"
     },
     "config": {
         "allow-plugins": {
