--- a/webapp/sfapp/config/packages/security.yaml
+++ b/webapp/sfapp/config/packages/security.yaml
@@ -28,7 +28,7 @@ security:
                 login_path: app_connexion
                 check_path: app_connexion
                 always_use_default_target_path: true
-                default_target_path: auth-success
+                default_target_path: accueil
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
