--- a/sa-software/software/platformio.ini
+++ b/sa-software/software/platformio.ini
@@ -18,3 +18,5 @@ lib_deps =
 	makuna/RTC@^2.4.2
     thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.4.0
     beegee-tokyo/DHT sensor library for ESPx@^1.19
+    me-no-dev/AsyncTCP @ ^1.1.1
+    me-no-dev/ESP Async WebServer @ ^1.2.3
